--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/deep-freeze": "^0.1.2",
+    "@types/jest": "^25.2.1",
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.1.0",
+    "deep-freeze": "0.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
