--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/deep-freeze": "^0.1.2",
     "@types/jest": "^25.2.1",
+    "@types/prismjs": "^1.16.0",
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.1.0",
     "deep-freeze": "0.0.1",
+    "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
