Create github actions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "sketchbook",
+  "name": "p5x-playground",
+  "homepage": "/p5x-playground",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
