--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         BRANCH: gh-pages
-        FOLDER: ./build
+        FOLDER: build
