--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.0",
     "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
