--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ cache:
   directories:
   - node_modules
 
+## build
+script:
+  - npm test -- -all --coverage
+  - npm run build
+
 ## sonar
 addons:
   sonarcloud:
@@ -13,11 +18,6 @@ addons:
 script:
   # other script steps might be done before running the actual analysis
   - sonar-scanner
-
-## build
-script:
-#  - npm test
-  - npm run build
 
 ## deploy
 deploy:
