--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "coverageReporters": ["lcov"]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
