--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/
 
 # Properties specific to language plugins:
 #   - For JavaScript
-sonar.javascript.lcov.reportPaths=coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
