--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^25.2.1",
     "@types/prismjs": "^1.16.0",
     "@types/react-redux": "^7.1.7",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.0",
     "deep-freeze": "0.0.1",
     "prismjs": "^1.20.0",
@@ -23,6 +24,7 @@
     "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
