--- a/package.json
+++ b/package.json
@@ -6,16 +6,10 @@
   "dependencies": {
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/deep-freeze": "^0.1.2",
-    "@types/jest": "^25.2.1",
     "@types/prismjs": "^1.16.0",
     "@types/react-redux": "^7.1.7",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.0",
-    "deep-freeze": "0.0.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -23,7 +17,6 @@
     "react-scripts": "3.4.0",
     "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
-    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
@@ -55,8 +48,16 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
+    "typescript-eslint": "0.0.1-alpha.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-react": "^7.20.0",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "@types/jest": "^25.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "deep-freeze": "0.0.1",
+    "@types/deep-freeze": "^0.1.2",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "@fluffy-spoon/substitute": "^1.143.0"
   }
 }
