--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.0",
+    "console-feed": "^3.0.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
