--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.10.4",
+    "@babel/standalone": "^7.10.4",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-virtual": "^2.0.3",
+    "@types/babel__standalone": "^7.1.2",
     "@types/prismjs": "^1.16.0",
     "@types/react-redux": "^7.1.7",
     "@types/redux-saga": "^0.10.5",
+    "@types/rollup__plugin-virtual": "^2.0.0",
     "@types/styled-components": "^5.1.0",
     "console-feed": "^3.0.0",
     "prismjs": "^1.20.0",
@@ -19,6 +25,7 @@
     "react-simple-code-editor": "^0.11.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "rollup": "^2.19.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
