--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ cache:
   directories:
   - node_modules
 
-script:
-  - npm test -- --all --coverage
-  - sonar-scanner
-  - npm run build
+jobs:
+  include:
+    - stage: test
+      script: npm test -- --all --coverage
+      script: sonar-scanner
+    - stage: build
+      script: npm run build
 
 deploy:
   provider: pages
