--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ jobs:
     - stage: deploy
       script: npm run build
       deploy:
+        skip_cleanup: true
         cleanup: false
         provider: pages
         github_token: $GITHUB_TOKEN
