--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
     - stage: test
       script: sonar-scanner
     - stage: deploy
+      before_script: echo "export default '$TRAVIS_COMMIT';" > ./src/commit_number.js
       script: npm run build
       deploy:
         skip_cleanup: true
