--- a/package.json
+++ b/package.json
@@ -54,18 +54,18 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "typescript-eslint": "0.0.1-alpha.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-react": "^7.20.0",
-    "@types/jest": "^25.2.1",
+    "@fluffy-spoon/substitute": "^1.143.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "deep-freeze": "0.0.1",
     "@types/deep-freeze": "^0.1.2",
+    "@types/jest": "^25.2.1",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "deep-freeze": "0.0.1",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-react": "^7.20.0",
     "redux-saga-test-plan": "^4.0.0-rc.3",
-    "@fluffy-spoon/substitute": "^1.143.0"
+    "typescript-eslint": "0.0.1-alpha.0"
   }
 }
